k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: shanghai
spec:
  replicas: 5
  template:
    metadata:
      labels:
        app: shanghai
    spec:
      containers:
      - name: shanghai
        image: asia.gcr.io/boxp-tk/shanghai:${CIRCLE_SHA1}
        ports:
        - containerPort: 80
