k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: shanghai
spec:
  selector:
    app: shanghai
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30308
      name: http
