k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shanghai
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "shanghai-ip"
spec:
  tls:
  - hosts:
    - boxp.tk
    - www.boxp.tk
    - blog.boxp.tk
    # - pubsub.boxp.tk
    # - shanghai.boxp.tk
    - mstdn.boxp.tk
    # - sasara.boxp.tk
    - vr-match.boxp.tk
    - api-hito-hub.boxp.tk
    secretName: shanghai-tls
  rules:
  - host: boxp.tk
    http:
      paths:
      - path: /*
        backend:
          serviceName: shanghai
          servicePort: 80
      # - path: /lemming/*
      #   backend:
      #     serviceName: gcp-pubsub-adapter
      #     servicePort: 80
  - host: www.boxp.tk
    http:
      paths:
      - path: /*
        backend:
          serviceName: shanghai
          servicePort: 80
  - host: blog.boxp.tk
    http:
      paths:
      - path: /*
        backend:
          serviceName: shanghai
          servicePort: 80
  # - host: pubsub.boxp.tk
  #   http:
  #     paths:
  #     - path: /*
  #       backend:
  #         serviceName: gcp-pubsub-adapter
  #         servicePort: 80
  # - host: shanghai.boxp.tk
  #   http:
  #     paths:
  #     - path: /*
  #       backend:
  #         serviceName: antlion-clojure
  #         servicePort: 80
  - host: mstdn.boxp.tk
    http:
      paths:
      - path: /*
        backend:
          serviceName: mstdn-nginx
          servicePort: 80
  # - host: sasara.boxp.tk
  #   http:
  #     paths:
  #     - path: /*
  #       backend:
  #         serviceName: sasara-server
  #         servicePort: 80
  - host: vr-match.boxp.tk
    http:
      paths:
      - path: /*
        backend:
          serviceName: vr-match-staging
          servicePort: 80
  - host: api-hito-hub.boxp.tk
    http:
      paths:
      - path: /*
        backend:
          serviceName: vr-match-back-end-staging
          servicePort: 80
